--- a/main.html
+++ b/main.html
@@ -2,7 +2,24 @@
 
 <html>
 
+<head><!DOCTYPE html>
+
+<html>
+
 <head>
+	<link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+	<!-- the entire body must be written by student -->
+    <script type="text/javascript" src="./script.js">
+</script>
+
+</body>
+<P id="yellow">Paragraph-1</P>
+<P id="red">Paragraph-2</P>
+<P id="green">Paragraph-3</P>
+</html>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
